docs/reference/v1.3/overview.rst
Overview
########

The heart of the LimePSB RPCM carrier board is Raspberry PI Compute Module 4 (CM4) or Compute Module 5 (CM5). The module is connect to a one lane mPCIe connector with a FPGA controlled RF front end. The block diagram for LimePSB RPCM board is as shown in Figure 3.

.. figure:: /images/LimePSB-RPCM_v1.3_diagrams_block.png
  :width: 600

  Figure 3: LimePSB RPCM v1.3 board block diagram

LimePSB RPCM board picture with highlighted connectors and main components are presented in Figure 4 and Figure 5. 

.. figure:: /images/LimePSB-RPCM_v1.3_top_components.png
  :width: 600

  Figure 4: LimePSB RPCM v1.3 board top connectors and main components

.. figure:: /images/LimePSB-RPCM_v1.3_bot_components.png
  :width: 600

  Figure 5: LimePSB RPCM v1.3 board bottom connectors and main components

Description of board components is given in the Table 1.

.. table:: Table 1. Board components


  +---------------------------------------------------------------------------------------------------------------------------------+
  | **Miscellaneous   devices**                                                                                                     |
  +==============================+=======================+==========================================================================+
  | **Board Reference**          | **Type**              | **Description**                                                          |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC17                         | FPGA                  | Lattice iCE40 Ultra family (iCELP4K)                                     |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC18                         | IC                    | FPGA configuration flash (16 MBIT)                                       |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC7                          | IC                    | I²C temperature sensor LM75                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC8/IC9                      | IC                    | I²C EEPROM Memory 128Kb (16K x 8), connected   to RF transceiver I2C bus |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC11/IC12                    | IC                    | I²C secure key storage                                                   |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC14/IC15                    | IC                    | I²C Real time clock                                                      |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC6                          | IC                    | 8 channel 12 bit ADC                                                     |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC13                         | IC                    | I²C I/O expander                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC19                         | IC                    | USB2.0 HUB                                                               |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC20, IC25, IC26, IC28, IC29 | IC                    | USB switch                                                               |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J24, J23                     | Pin header            | 2-pin and 4-pin FAN connector (5V default or   3.3V or VCC_INT voltage)  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | Configuration,   Status, Setup Elements and GPIOs                                                                               |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | LED1, LED2, LED3, LED4       | Red-green status LEDs | User defined indication LED                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | LED5                         | Red-green status LEDs | Raspberry Pi CM4/5   status                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | LED6                         | Green status LED      | Power indication LED                                                     |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | LED7                         | Red-green status LEDs | FPGA status                                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | BZ1                          | Buzzer                | User defined                                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J12                          | Header                | 14-pin Raspberry Pi CM4 SYS header                                       |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J5                           | Header                | Power control and PG status                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J6                           | Header                | Wireless LAN and Bluetooth control                                       |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J10                          | Header                | 20-pin CM4 GPIO header                                                   |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J25                          | Header                | FPGA configuration                                                       |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | SW1                          | DIP switch            | Boot and USB configuration                                               |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | RF   front end                                                                                                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC44, IC45                   | IC                    | PA TQP3M9018                                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC48, IC49                   | IC                    | LNA SPF5043Z                                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC43, IC44, IC46, IC47       | IC                    | RF switch SKY13286                                                       |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | Communication   Ports                                                                                                           |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J1, J2                       | Connector             | Raspberry Pi CM4(L)/5 connectors                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J11                          | Header                | Raspberry Pi CM4 UART0 header (unpopulated)                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J8                           | Header                | 5-pin front screen connector (power, I2C,   button)                      |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J26                          | USB                   | USB 2.0 (Type-C) socket                                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J30                          | USB                   | Dual USB 3.0 (Type-A) socket                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J9                           | Ethernet              | Gigabit RJ45 (Ethernet with magnetics) port                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J31, J32                     | HDMI                  | HDMI 2.0 socket                                                          |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J15, J16                     | LVDS                  | FPC 15-pin for display and camera                                        |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J14, J17                     | Audio/Video           | 3.5 mm jack, Header (unpopulated)                                        |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J7                           | SDIO                  | Micro SD card holder                                                     |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J4                           | Nano-SIM              | Nano-SIM card holder                                                     |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J3                           | Mini PCIe             | Mini PCIe x1 expansion slot                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | Clock   Circuitry                                                                                                               |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO1                          | VCOCXO                | 30.72 MHz VCOCXO                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO6                          | VCOCXO                | 10 MHz VCOCXO                                                            |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO2, XO7                     | VCTCXO                | 30.72 MHz VCTCXO                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO3, XO8                     | VCTCXO                | 30.72 MHz VCTCXO                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO4, XO9                     | VCTCXO                | 40.00 MHz VCTCXO                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO5, XO10                    | VCTCXO                | 38.40 MHz VCTCXO                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC40                         | IC                    | GNSS receiver                                                            |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC33 (IC35)                  | IC                    | 16 (8) bit DAC for   XOs VC tuning                                       |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC39                         | IC                    | RPi sync mux                                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC30, IC36                   | IC                    | Clock buffer                                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC34                         | IC                    | Phase detector                                                           |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J34                          | SMA connector         | Reference clock input EXT_SYNC_IN                                        |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J37                          | SMA connector         | Reference clock output EXT_SYNC_OUT                                      |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J33, J35                     | U.FL connector        | Reference clock output                                                   |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J22/J20, J21                 | Multiple              | Internal connector J20/J22 to external SMA   J21                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J44                          | U.FL connector        | External GNSS antenna                                                    |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | Power   Supply                                                                                                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC57                         | IC                    | Switching regulator ADP2386 (3.3V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC58                         | IC                    | Switching regulator ADP2386 (5.0V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC59, IC64                   | IC                    | Linear regulator AP7361-FGE (3.3V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC61                         | IC                    | Linear regulator AP7361-FGE (2.5V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC63                         | IC                    | Linear regulator AP7361-FGE (1.5V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC60                         | IC                    | Linear regulator AP7361-FGE (1.5V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC62                         | IC                    | Voltage reference AS431ANTR-G1 (2.5V rail)                               |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+

A more detailed description is provided in the following sections.

